--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "biome check  --write ./src",
     "preview": "vite preview"
   },
   "dependencies": {
     "canvas-confetti": "^1.9.2",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.0.3",
     "howler": "^2.2.4",
     "lucide-react": "^0.344.0",
