--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "use-sound": "^4.0.1"
+    "use-sound": "^4.0.1",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
